added qualifies asset urls

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     />
     <!-- Google fonts deps ends-->
 
-    <link rel="stylesheet" href="./neon.css" />
-    <script type="module" src="./index.js"></script>
+    <link rel="stylesheet" href="https://www.jaiswaltrading.company/neon.css" />
+    <script type="module" src="https://www.jaiswaltrading.company/index.js"></script>
     <!-- Dependecies Ends here-->
   </head>
   <body class="text-white">
@@ -44,7 +44,7 @@
       <div class="w-screen h-screen absolute cover">
         <img
           id="bg-img"
-          src="./imgs/wallps/1186214.jpg"
+          src="https://www.jaiswaltrading.company/imgs/wallps/1186214.jpg"
           class="w-full h-full"
         />
       </div>
@@ -70,14 +70,14 @@
       <div class="slider-text-heading flex flex-col">
         <div class="w-full px-6 lg:px-16 flex flex-row justify-between h-20">
           <div>
-            <img src="./svgs/arrow-left.svg" class=" arrow-left w-10 border-2 border-white hover:bg-purple-600 hover:border-purple-600 p-2" />
+            <img src="https://www.jaiswaltrading.company/svgs/arrow-left.svg" class=" arrow-left w-10 border-2 border-white hover:bg-purple-600 hover:border-purple-600 p-2" />
           </div>
           <div class="text-center">
             <p id="name" class="text-lato  bold text-4xl" ></p>
           <p id="meta" class="text-orienta text-xl" ></p>
           </div>
           <div>
-            <img src="./svgs/arrow-right.svg" class="arrow-right w-10 border-2 hover:bg-purple-600 border-white hover:bg-purple-600 hover:border-purple-600 p-2" />
+            <img src="https://www.jaiswaltrading.company/svgs/arrow-right.svg" class="arrow-right w-10 border-2 hover:bg-purple-600 border-white hover:bg-purple-600 hover:border-purple-600 p-2" />
           </div>
         </div>
       </div>
@@ -87,7 +87,7 @@
           <div
             class="w-full h-4/5 flex flex-row mt-10 justify-center"
             style="
-              background-image: url('./imgs/wallps/map.jpg');
+              background-image: url('https://www.jaiswaltrading.company/imgs/wallps/map.jpg');
               background-size: contain;
             "
           >
@@ -104,7 +104,7 @@
                 shadow-xl
               "
             >
-              <img src="./imgs/wallps/astronatu.jpg" class="w-1/2 h-full" />
+              <img src="https://www.jaiswaltrading.company/imgs/wallps/astronatu.jpg" class="w-1/2 h-full" />
               <div class="h-full w-1/2 flex flex-col py-4 lg:py-10 px-2 lg:px-10">
                 <div class="w-full text-center mt-8 lg:mt-0">
                   <p class="text-lato font-extrabold text-xl lg:text-4xl">CONTACT</p>
@@ -115,7 +115,7 @@
                     GOLGHAR, 273001
                   </div>
                   <div onclick="window.open('tel:+919936128128')" class="w-full mt-8 lg:mt-20 flex flex-row px-4 py-4 border-4 border-black">
-                    <img class="w-6 h-6" src="./imgs/call.png" />
+                    <img class="w-6 h-6" src="https://www.jaiswaltrading.company/imgs/call.png" />
                     <p class="ml-2 lg:ml-4 text-lato lg:text-xl text-sm">+919936128128</p>
                   </div>
 
