--- a/fb.html
+++ b/fb.html
@@ -16,6 +16,7 @@
         console.log(response); // The current login status of the person.
         if (response.status === "connected") {
           // Logged into your webpage and Facebook.
+          console.log(response.authResponse)
           testAPI();
         } else {
           // Not logged into your webpage or we are unable to tell.
@@ -33,7 +34,7 @@
       }
       window.fbAsyncInit = function () {
         FB.init({
-          appId: "569463584126492",
+          appId: "1042356729887669",
           autoLogAppEvents: true,
           xfbml: true,
           version: "v12.0",
